<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/MainMenuBackGround"
    tools:context=".Main_Menu">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="280dp"
        android:layout_marginRight="280dp"
        android:layout_weight="1"
        android:contentDescription="@string/main_menu_red_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:color/holo_red_light" />

    <Button
        android:id="@+id/ChimeNewsBtn"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginEnd="100dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="100dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="80dp"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:text="@string/MainMenuchimeBtnName"
        android:textSize="25sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/BuildingHourBtn"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginEnd="100dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="100dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="200dp"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:text="@string/MainMenuBuildingHourBtnName"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/CampusMapBtn"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginEnd="100dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="100dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="320dp"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:text="@string/MainMenuCampusMapBtnName"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/CampusFoodBtn"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginEnd="100dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="100dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="440dp"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:text="@string/MainMenuEateriesBtnName"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>