<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".Hours">

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/tabBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/TabBarHeight"
        android:background="@color/TabBarColor"
        app:itemBackground="@color/TabBarColor"
        app:itemIconTint="@color/tab_bar_colors"
        app:itemTextColor="@color/tab_bar_colors"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/tab_items" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:layout_marginEnd="75dp"
        android:layout_marginLeft="75dp"
        android:layout_marginRight="75dp"
        android:layout_marginStart="75dp"
        android:gravity="fill_vertical|center_horizontal"
        android:text="@string/MainMenuBuildingHourBtnName"
        android:textColor="@color/TabBarColor"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/tabs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="65dp"
        android:layout_height="0dp"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/biola_icon_white_description"
        app:layout_constraintBottom_toTopOf="@+id/tabs"
        app:layout_constraintEnd_toStartOf="@+id/textView6"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/biola_icon_red" />

    <android.support.design.widget.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/TabBarColor"
        app:layout_constraintBottom_toTopOf="@+id/container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <android.support.design.widget.TabItem
            android:id="@+id/tabItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chapel_hours_tab_name" />

        <android.support.design.widget.TabItem
            android:id="@+id/tabItem3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/building_hours_tab_name" />


    </android.support.design.widget.TabLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_width="0dp"
        android:layout_height="395dp"
        android:layout_weight="1"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toTopOf="@+id/tabBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabs"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

</android.support.constraint.ConstraintLayout>