<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Restaurants_Food_Menus_2">

    <ListView
        android:id="@+id/RestaurantsMenuListView2"
        android:layout_width="368dp"
        android:layout_height="461dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginStart="2dp"
        app:layout_constraintBottom_toTopOf="@+id/tabBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RestaurantTitle" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="56dp"
        android:layout_height="54dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/biola_icon_white_description"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/biola_icon_red" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="289dp"
        android:layout_height="75dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:gravity="fill_vertical"
        android:text="@string/restaurantsiconlabel"
        android:textColor="@color/TabBarColor"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/restaurantTitle"
        android:layout_width="0dp"
        android:layout_height="39dp"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:gravity="fill_vertical"
        android:text="@string/restaurant_menus"
        android:textColor="@color/TabBarColor"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/RestaurantsMenuListView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/tabBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/TabBarHeight"
        android:background="@color/TabBarColor"
        app:itemBackground="@color/TabBarColor"
        app:itemIconTint="@color/tab_bar_colors"
        app:itemTextColor="@color/tab_bar_colors"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/tab_items" />
</android.support.constraint.ConstraintLayout>